--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peritext-template-pyrrah",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": " a web template designed dedicated to long reading experiences and context explorations, for the peritext ecosystem",
   "main": "dist/index.js",
   "scripts": {
@@ -23,11 +23,11 @@
   "peerDependencies": {
     "react": "^16.7.0-alpha",
     "react-dom": "^16.7.0-alpha",
-    "lodash": "^4.17"
+    "lodash": "^4.17",
+    "peritext-utils": "^0.1.2"
   },
   "dependencies": {
-    "peritext-schemas": "^0.1.1",
-    "peritext-utils": "^0.1.0",
+    "peritext-schemas": "^0.1.2",
     "react-citeproc": "^0.1.10",
     "react-helmet": "^5.2.0",
     "react-markdown": "^4.0.6",
