--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "build": "rm -rf dist; mkdir dist; babel src -d dist",
     "addbuild": "git add dist",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "pre-commit": [
     "lint",
@@ -41,15 +43,34 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.0.0",
     "@babel/preset-env": "^7.2.3",
     "@babel/preset-react": "^7.0.0",
-    "babel-eslint": "^8.2.2",
     "@robindemourat/eslint-config": "git+https://github.com/robindemourat/eslint-config.git",
+    "@storybook/addon-actions": "^5.0.11",
+    "@storybook/addon-links": "^5.0.11",
+    "@storybook/addons": "^5.0.11",
+    "@storybook/react": "^5.0.11",
+    "axios": "^0.18.0",
+    "babel-eslint": "^8.2.2",
+    "babel-loader": "^8.0.5",
     "babel-plugin-transform-decorators-legacy": "^1.3.5",
-    "pre-commit": "^1.2.2",
     "eslint": "^4.19.1",
     "eslint-plugin-mocha": "^5.2.0",
     "eslint-plugin-react": "^7.5.1",
+    "lodash": "^4.17.11",
+    "peritext-contextualizer-bib": "^0.1.0",
+    "peritext-contextualizer-embed": "^0.1.0",
+    "peritext-contextualizer-glossary": "^0.1.0",
+    "peritext-contextualizer-image": "^0.1.0",
+    "peritext-contextualizer-source-code": "^0.1.0",
+    "peritext-contextualizer-table": "^0.1.1",
+    "peritext-contextualizer-vegalite": "^0.1.0",
+    "peritext-contextualizer-video": "^0.1.0",
+    "peritext-contextualizer-webpage": "^0.1.0",
+    "peritext-utils": "^0.1.5",
+    "pre-commit": "^1.2.2",
+    "raw-loader": "^2.0.0",
     "react": "^16.7.0-alpha",
-    "react-dom": "^16.7.0-alpha"
+    "react-dom": "^16.7.0-alpha",
+    "react-frame-component": "^4.1.0"
   },
   "babel": {
     "plugins": [
